--- a/index.html
+++ b/index.html
@@ -4,10 +4,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Html file</title>
 </head>
 <body>
-    <p>ebfjberkbrekjgb</p>
-    
+    <!-- <h1>head1</h1>
+    <h2>head2</h2>
+    <h3>head3</h3>
+    <h4>head4</h4>
+    <h5>head5</h5>
+    <h6>head6</h6>
+    <img src="images/photo-1575936123452-b67c3203c357.jpeg" width="300" height="300">
+    <figure>
+        <img src="images\photo-1575936123452-b67c3203c357.jpeg " width="200" height="200">
+        <figcaption>My photo</figcaption>
+    </figure>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti voluptatibus itaque doloribus voluptatum non dignissimos nesciunt 
+    atque optio, placeat fuga id quaerat a cumque facere, dolorum deserunt animi architecto deleniti.</p>
+    <button>click here</button>
+    <button>submit</button> -->
+    <h1>About me</h1>
+    <h2>About me</h2>
+    <h3>About me</h3>
+    <h4>About me</h4>
+    <h5>About me</h5>
+    <h6>About me</h6>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci reprehenderit quod itaque. Quis exercitationem, sed consectetur harum 
+    placeat accusamus reiciendis atque necessitatibus magnam ex dolore iusto non error ratione aspernatur.</p>
+    <figure>
+        <img src="images\photo-1575936123452-b67c3203c357.jpeg" alt="No images" width="400" height="400">
+        <figcaption>photo</figcaption>
+    </figure>
+    <button>Click Me</button>
+    <button>submit</button>
 </body>
 </html>
